--- a/index.html
+++ b/index.html
@@ -9,26 +9,34 @@
     <link href='https://fonts.googleapis.com/css2?family=Rochester&family=Quicksand&display=swap' rel='stylesheet'>
 </head>
 <body>
-    <div class="navbarcontainer">
+    <div class="navbarcontainer" id="home">
         <div class = 'navbar'>
            <ul>
                 <li><a class="active" href="#home">home</a></li>
                 <li><a href="#store">store</a></li>
             <li><a href="#cart">cart</a></li>
             </ul>
+        </div>        
+    </div>
+    
+    <div class="banner">
+        <p id='Bubbles'>Bubbles</p>
+        <div class="bannerContainer">
+            <div class="textContainer">
+                <p id="title">Lorem ipsum dolor sit amet</p>
+                <p id='subtitle'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper pharetra rhoncus.</p>
+                <button type="button" id="products">products</button><button type="button">log in</button>
+            </div>
+            <!-- <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" id="bubbleDraw">
+            <path fill="#feb7bb" d="M51.2,-68.3C65.5,-60,75.7,-44,81.2,-26.5C86.7,-9,87.5,9.8,78.4,21.6C69.3,33.5,50.3,38.3,35.6,44.3C20.9,50.4,10.4,57.7,-0.9,58.9C-12.2,60.2,-24.5,55.3,-36.8,48.5C-49.1,41.7,-61.5,32.9,-69,20C-76.5,7.1,-79.2,-9.7,-73,-22.1C-66.8,-34.6,-51.8,-42.6,-38.1,-51C-24.5,-59.5,-12.2,-68.4,3.1,-72.6C18.4,-76.9,36.9,-76.5,51.2,-68.3Z" transform="translate(100 100)" />
+            </svg>         -->
+            <img src="assets/blob.png" id="bubbleDraw">
         </div>
-        <p>Bubbles</p>
+        <a href="#home"><img src="assets/down-2.4s-200px.svg" id="arrow"></a>
     </div>
 
-    <div class="bannerContainer">
-        <div class="textContainer">
-            <p id="title">Lorem ipsum dolor sit amet</p>
-            <p id='subtitle'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ullamcorper pharetra rhoncus.</p>
-            <button type="button" id="products">Products</button><button type="button">Log in</button>
-        </div>
-        <svg viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" id="bubbleDraw">
-            <path fill="#feb7bb" d="M51.2,-68.3C65.5,-60,75.7,-44,81.2,-26.5C86.7,-9,87.5,9.8,78.4,21.6C69.3,33.5,50.3,38.3,35.6,44.3C20.9,50.4,10.4,57.7,-0.9,58.9C-12.2,60.2,-24.5,55.3,-36.8,48.5C-49.1,41.7,-61.5,32.9,-69,20C-76.5,7.1,-79.2,-9.7,-73,-22.1C-66.8,-34.6,-51.8,-42.6,-38.1,-51C-24.5,-59.5,-12.2,-68.4,3.1,-72.6C18.4,-76.9,36.9,-76.5,51.2,-68.3Z" transform="translate(100 100)" />
-        </svg>          
+    <div class="store" id="store">
+        
     </div>
 </body>
 </html>
