--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
             </svg>         -->
             <img src="assets/blob.png" id="bubbleDraw">
         </div>
-        <a href="#home"><img src="assets/down-2.4s-200px.svg" id="arrow"></a>
+        <a href="#store"><img src="assets/down-2.4s-200px.svg" id="arrow"></a>
     </div>
 
     <div class="store" id="store">
-        
+        <div class="topStore">
+            <p id="subtitle">Newest products</p>
+        </div>
     </div>
 </body>
 </html>
